--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
 }
 
+#main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 #root {
   display: flex;
   width: 100vw;
